# code-summariser

./: .gitignore  README.md  requirements-dev.txt  setup.cfg
codesummariser/: __main__.py  config.py  filesummary.py  io.py  logger_config.py  summarise.py
