[metadata]
name = codesummariser
version = 0.0.1
description = Summarise a codebase
long_description = file: README.md
long_description_content_type = text/markdown
author = Michael Walshe
author_email = michael.walshe@katalyzedata.com

[options]
packages = find:
python_requires = >=3.6
install_requires = 
    openai==0.27.8
    langchain==0.0.229
    tiktoken==0.4.0
    python-dotenv

[options.entry_points]
console_scripts =
    codesummariser = codesummariser.__main__:main

[options.packages.find]
exclude =
    tests*
    testing*
